Use generics.